After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 708550 - Regression: / no longer works to activate Find bar
Regression: / no longer works to activate Find bar
Status: RESOLVED FIXED
Product: epiphany
Classification: Core
Component: General
3.9.x
Other Linux
: Normal normal
: ---
Assigned To: Epiphany Maintainers
Epiphany Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-09-21 20:15 UTC by Reinout van Schouwen
Modified: 2013-10-01 18:35 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
ephy-find-toolbar: Work again / and ' to activate the find bar (882 bytes, patch)
2013-09-30 15:57 UTC, Yosef Or Boczko
committed Details | Review

Description Reinout van Schouwen 2013-09-21 20:15:18 UTC
The / (forward slash) key has always been a shortcut to activate the Find bar. With the new Find bar this has regressed and I'm now fruitlessly banging on / each time I want to search in a webpage.
Comment 1 Yosef Or Boczko 2013-09-30 15:57:31 UTC
Created attachment 256104 [details] [review]
ephy-find-toolbar: Work again / and ' to activate the find bar
Comment 2 Claudio Saavedra 2013-09-30 16:07:04 UTC
Review of attachment 256104 [details] [review]:

To be honest I consider this to be one of those rare, obsolete features that we shouldn't really care about. But the patch is correct in that this is a left-over from the porting to GtkSearchBar, so I think we can fix this for now.
Comment 3 Reinout van Schouwen 2013-09-30 22:21:03 UTC
(In reply to comment #1)
> Created an attachment (id=256104) [details] [review]
> ephy-find-toolbar: Work again / and ' to activate the find bar

Ah, I overlooked the ' shortcut that, conventionally, only searches in hyperlinks. Is that ported as well? (It may be a detail, but important for some.)

@Claudio: the feature is anything but obsolete if the shortcut is "hard wired" into your brain...:)
Comment 4 Yosef Or Boczko 2013-10-01 18:34:42 UTC
Review of attachment 256104 [details] [review]:

pushed as 2565ac672cc65817539a8a3ed2f954dc8f1835bd - ephy-find-toolbar: Work again / and ' to activate the find bar