ephy-find-toolbar: Work again / and ' to activate the find bar

https://bugzilla.gnome.org/show_bug.cgi?id=708550